[package]
name = "binance-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
binance-async = { git = "https://github.com/dovahcrow/binance-async-rs.git" }
clap = {version = "4", features = ["derive", "env"]}
rust_decimal = "1"
env_logger = "0.9"
fehler = "1"
futures = "0.3"
hyper = {version = "0.14", features = ["server", "http2"]}
lazy_static = "1"
log = "0.4"
tokio = {version = "1", features = ["full"]}
prometheus = "0.13"
